<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="cybulski.tomasz.tomaszcybulskilab1.Activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_mass_input">
        <TextView
            android:id="@+id/text_view_mass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass_label" />
        <EditText
            android:id="@+id/edit_text_mass"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mass_text"
            android:textAlignment="center"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/linear_layout_height_input"
       android:layout_below="@id/linear_layout_mass_input">
       <TextView
           android:id="@+id/text_view_height_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/height_label"
           android:gravity="start"/>
       <EditText
           android:id="@+id/edit_text_height"
           android:inputType="numberDecimal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/enter_height_text"
           android:textAlignment="center"/>
   </LinearLayout>

    <Button
        android:id="@+id/button_count_bmi"
        android:layout_below="@id/linear_layout_height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_bmi" />

    <TextView
        android:id="@+id/text_view_bmi_label"
        android:layout_marginTop="15dp"
        android:layout_below="@id/button_count_bmi"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label_label"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/text_view_result_bmi"
        android:layout_below="@id/text_view_bmi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/text_view_result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_result_bmi"
        android:textSize="20sp"/>

</RelativeLayout>
